# CorvusMiner

./: .gitignore  BUILD.md  README.md  builder
Builder/: README.md  build.ps1  build_gui.bat  build_gui.py  builder.go  compile_gui.ps1  go.mod  linux_builder.go  main.go  windows_builder.go
Client/: CMakeLists.txt
Client/Obfusk8/: CMakeLists.txt
Client/Obfusk8/Instrumentation/materialization/state/: Obfusk8Core.hpp
Client/Obfusk8/Instrumentation/materialization/transform/: AES8.hpp  Resolve8.hpp  getpeb8.hpp  k8_indsys.hpp
Client/Obfusk8/Instrumentation/materialization/transform/K8_UTILS/: k8_utils.hpp
Client/Obfusk8/Instrumentation/materialization/transform/PASSES/: obf_cmethods.cxx
Client/Obfusk8/_MAIN/: main.cpp
Client/Obfusk8/k8_CryptographyAPIs/: k8_CryptographyAPIs.hpp
Client/Obfusk8/k8_NetworkingAPIs/: k8_NetworkingAPIs.hpp
Client/Obfusk8/k8_ProcessManipulationAPIs/: k8_ProcessManipulationAPIs.hpp
Client/Obfusk8/k8_RegistryAPIs/: k8_RegistryAPIs.hpp
Client/backup/include/: antivm.h  config_manager.h  delete_pending_file.h  embedded_resource.h  encryption.h  hollowing_parts.h  http_client.h  kernel32_undoc.h  persistence.h  remote_miner_loader.h  resources.h  util.h
Client/backup/src/: antivm.cpp  config_manager.cpp  delete_pending_file.cpp  hollowing_parts.cpp  http_client.cpp  main.cpp  persistence.cpp  util.cpp
Client/cmake/: GenerateEmbeddedConfig.cmake
Client/include/: config_manager.h  embedded_config.h  embedded_resource.h  encryption.h  http_client.h  httplib.h  kernel32_undoc.h  ntddk.h  util.h
Client/resources/: embedded_resource.rc
Client/src/: antivm.cpp  config_manager.cpp  hollowing_parts.cpp  http_client.cpp  inject_core.cpp  main.cpp  persistence.cpp  util.cpp
Modified XMRig/: CMakeLists.txt
Modified XMRig/src/: App_win.cpp  donate.h  xmrig.cpp
Modified XMRig/src/net/strategies/: DonateStrategy.cpp
Panel/: README.md  go.mod  go.sum  main.go
Panel/database/: db.go
Panel/handlers/: auth.go  builder.go  handlers.go
Panel/models/: models.go
Panel/session/: session.go
Panel/static/css/: style.css
Panel/static/js/: main.js
Panel/static/resources/: .gitignore
Panel/templates/: builder.html  config.html  layout.html  miners.html  updates.html
static/js/: main.js
static/resources/: .gitignore  README.md
templates/: config.html  dashboard.html  donations.html  layout.html  login.html  miners.html  register.html
